Update Инструкция на русском.md

--- a/Инструкция на русском.md
+++ b/Инструкция на русском.md
@@ -54,7 +54,7 @@
 Если последний срок составляет 1 день, то вместо 0.5 дней, бот установит его на 0, так будто нарушений ранее не было.
 
 ## Команда /warn
-Для применения команды, необходимо сделать реплай на сообщение подлежащего предупреждения и начать своё сообщение с "/unban". 
+Для применения команды, необходимо сделать реплай на сообщение подлежащего предупреждения и начать своё сообщение с "/warn". 
 
 Бот отметит себе, что данный пользователь получил предупреждение. Если пользователь получает третье предупреждение, то он получит стандартную санкцию, как если бы мы написали /ban, а так же счётчик его предупреждений сбросится до 0.
 
